Add files from the JS exercise

--- a/js/add-list-items/index.html
+++ b/js/add-list-items/index.html
@@ -31,7 +31,10 @@
 <body>
     <input type="text" id="text-input" autocomplete="off" />
     <button id="add-button">Add</button>
-    <ul id="list"></ul>
+    <ul id="list">
+        <!-- li items here -->
+    </ul>
+    
     <script src="main.js"></script>
 </body>
 </html>
